--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Pofile</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>My Portfolio</h1>
-    <img src="assets/images/20160120_104255.jpg" width="200px" height="200px">
+    <header>
+        <div class="header">
+            <div id="header-div">
+                <div id="header-name">
+                    Khusanboy Ibragimov
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                        <li>|</li>
+                        <li>
+                            <a href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li>|</li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="content">
+        <div class="title">About Me</div>
+        <hr>
+        <div class="contact-content">
+            <img src="assets/images/Khusanboy_portfolio.png" alt="Khusanboy Ibragimov">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Adipiscing diam donec adipiscing tristique risus. Sit amet nisl purus in mollis nunc sed id.
+                Tristique magna sit amet purus. Fames ac turpis egestas sed. Etiam non quam lacus suspendisse faucibus interdum
+                posuere. Commodo elit at imperdiet dui accumsan sit amet nulla. Eu ultrices vitae auctor eu augue ut. Iaculis
+                urna id volutpat lacus laoreet non curabitur gravida. Nunc vel risus commodo viverra maecenas accumsan lacus
+                vel. Praesent tristique magna sit amet. Feugiat scelerisque varius morbi enim nunc faucibus a. In metus vulputate
+                eu scelerisque felis imperdiet proin fermentum. Sit amet commodo nulla facilisi nullam vehicula ipsum a arcu.
+                Eu lobortis elementum nibh tellus molestie nunc.</p>
+            <p class="clear">Lectus arcu bibendum at varius vel. Cursus metus aliquam eleifend mi in nulla posuere. Iaculis at erat pellentesque
+                adipiscing commodo elit at. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Arcu cursus vitae
+                congue mauris rhoncus aenean vel elit. Blandit cursus risus at ultrices mi tempus imperdiet nulla. Urna nec
+                tincidunt praesent semper. Convallis a cras semper auctor neque vitae tempus. Sit amet venenatis urna cursus
+                eget nunc scelerisque viverra. Massa vitae tortor condimentum lacinia. Odio ut enim blandit volutpat maecenas
+                volutpat blandit. At quis risus sed vulputate odio ut enim blandit. Turpis in eu mi bibendum neque egestas
+                congue. Feugiat in fermentum posuere urna nec. Id eu nisl nunc mi ipsum faucibus vitae.</p>
+            <p class="clear"> Nulla at volutpat diam ut. Sollicitudin tempor id eu nisl. Iaculis nunc sed augue lacus viverra vitae congue.
+                Lorem donec massa sapien faucibus et molestie. Porta nibh venenatis cras sed felis eget. Placerat duis ultricies
+                lacus sed. Amet purus gravida quis blandit turpis cursus in. </p>
+        </div>
+    </section>
+
+    <footer>Copyright &copy;</footer>
+
 </body>
+
 </html>
