--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My Pofile</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
 
 <body>
@@ -15,18 +16,18 @@
         <div class="header">
             <div id="header-div">
                 <div id="header-name">
-                    Khusanboy Ibragimov
+                    Khusanboy
                 </div>
                 <div>
                     <ul>
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                        <li>|</li>
+                        <li class="stick">|</li>
                         <li>
                             <a href="portfolio.html">Portfolio</a>
                         </li>
-                        <li>|</li>
+                        <li class="stick">|</li>
                         <li>
                             <a href="#">About</a>
                         </li>
@@ -55,12 +56,12 @@
                 tincidunt praesent semper. Convallis a cras semper auctor neque vitae tempus. Sit amet venenatis urna cursus
                 eget nunc scelerisque viverra. Massa vitae tortor condimentum lacinia. Odio ut enim blandit volutpat maecenas
                 volutpat blandit. At quis risus sed vulputate odio ut enim blandit. Turpis in eu mi bibendum neque egestas
-                congue. Feugiat in fermentum posuere urna nec. Id eu nisl nunc mi ipsum faucibus vitae.</p>
+                congue. Feuggiat in fermentum posuere urna nec. Id eu nisl nunc mi ipsum faucibus vitae.</p>
             
         </div>
     </section>
 
-    <footer>Copyright &copy;</footer>
+    <footer>Rutgers Bootcamp 2018</footer>
 
 </body>
 
