--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
-                    <li>|</li>
+                    <li class="stick">|</li>
                     <li>
                         <a href="portfolio.html">Portfolio </a>
                     </li>
-                    <li>|</li>
+                    <li class="stick">|</li>
                     <li>
                         <a href="index.html">About </a>
                     </li>
