--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,11 @@
                         <li>
                             <a href="contact.html">Contact</a>
                         </li>
-                        <li>|</li>
+                        <li class="stick">|</li>
                         <li>
                             <a href="#">Portfolio</a>
                         </li>
-                        <li>|</li>
+                        <li class="stick">|</li>
                         <li>
                             <a href="index.html">About</a>
                         </li>
