--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="contact-content">
             <img src="assets/images/Khusanboy_portfolio.png" alt="Khusanboy Ibragimov">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Adipiscing diam donec adipiscing tristique risus. Sit amet nisl purus in mollis nunc sed id.
+                maga aliqua. Adipiscing diam donec adipiscing tristique risus. Sit amet nisl purus in mollis nunc sed id.
                 Tristique magna sit amet purus. Fames ac turpis egestas sed. Etiam non quam lacus suspendisse faucibus interdum
                 posuere. Commodo elit at imperdiet dui accumsan sit amet nulla. Eu ultrices vitae auctor eu augue ut. Iaculis
                 urna id volutpat lacus laoreet non curabitur gravida. Nunc vel risus commodo viverra maecenas accumsan lacus
