--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header">
             <div id="header-div">
                 <div id="header-name">
-                    Khusanboy
+                    Khusanboy Ibragimov
                 </div>
                 <div>
                     <ul>
