--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="header">
             <div id="header-div">
                 <div id="header-name">
-                    Ibragimov Khusanboy
+                     Khusanboy
                 </div>
                 <ul>
                     <li>
