--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Pofile</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="header">
             <div id="header-div">
                 <div id="header-name">
-                    Khusanboy Ibragimov
+                    Khusanboy
                 </div>
                 <div>
                     <ul>
