--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </section>
-    <footer>Copyright &copy;</footer>
+    <footer>Rutgers Bootcamp 2018</footer>
 </body>
 
 </html>
