--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </section>
-    <footer>Copyright &copy;</footer>
+    <footer>Rutgers Bootcamp 2018</footer>
 
 </body>
 
