--- a/index.html
+++ b/index.html
@@ -5,64 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Pofile</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
-   <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
+    <title>My Profile</title>
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div id="header-div">
-                <div id="header-name">
-                    Khusanboy
-                </div>
-                <div>
-                    <ul>
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>
-                        <li class="stick">|</li>
-                        <li>
-                            <a href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="stick">|</li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">
+                Khusanboy
+            </a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
     </header>
-
-    <section class="content">
-        <div class="title">About Me</div>
-        <hr>
-        <div class="contact-content">
-            <img src="assets/images/Khusanboy_portfolio.png" alt="Khusanboy Ibragimov">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                maga aliqua. Adipiscing diam donec adipiscing tristique risus. Sit amet nisl purus in mollis nunc sed id.
-                Tristique magna sit amet purus. Fames ac turpis egestas sed. Etiam non quam lacus suspendisse faucibus interdum
-                posuere. Commodo elit at imperdiet dui accumsan sit amet nulla. Eu ultrices vitae auctor eu augue ut. Iaculis
-                urna id volutpat lacus laoreet non curabitur gravida. Nunc vel risus commodo viverra maecenas accumsan lacus
-                vel. Praesent tristique magna sit amet. Feugiat scelerisque varius morbi enim nunc faucibus a. In metus vulputate
-                eu scelerisque felis imperdiet proin fermentum. Sit amet commodo nulla facilisi nullam vehicula ipsum a arcu.
-                Eu lobortis elementum nibh tellus molestie nunc.</p>
-            <p class="clear">Lectus arcu bibendum at varius vel. Cursus metus aliquam eleifend mi in nulla posuere. Iaculis at erat pellentesque
-                adipiscing commodo elit at. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Arcu cursus vitae
-                congue mauris rhoncus aenean vel elit. Blandit cursus risus at ultrices mi tempus imperdiet nulla. Urna nec
-                tincidunt praesent semper. Convallis a cras semper auctor neque vitae tempus. Sit amet venenatis urna cursus
-                eget nunc scelerisque viverra. Massa vitae tortor condimentum lacinia. Odio ut enim blandit volutpat maecenas
-                volutpat blandit. At quis risus sed vulputate odio ut enim blandit. Turpis in eu mi bibendum neque egestas
-                congue. Feuggiat in fermentum posuere urna nec. Id eu nisl nunc mi ipsum faucibus vitae.</p>
-            
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1> About Me</h1>
+            <img src="assets/images/Khusanboy_portfolio.png" class="auth-image" alt="Khusanboy" >
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, corporis quibusdam? Nemo enim quos eos sed et! Aut vel consectetur
+                eaque! Quod animi eveniet veniam ad maiores suscipit ullam temporibus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non saepe temporibus consectetur accusantium
+                commodi quae reiciendis maxime repudiandae repellendus atque, optio minima tempore sequi iste? Cumque velit
+                quos vero.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non saepe temporibus consectetur accusantium
+                        commodi quae reiciendis maxime repudiandae repellendus atque, optio minima tempore sequi iste? Cumque velit
+               quos vero.</p>
+         </section>
+    </div>
+    <footer>
+        <div class="container">
+            Rutgers Bootcamp 2018
         </div>
-    </section>
-
-    <footer>Rutgers Bootcamp 2018</footer>
-
+    </footer>
 </body>
 
 </html>
