--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,51 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
+    <title>My</title>
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div id="header-div">
-                <div id="header-name">
-                     Khusanboy
-                </div>
-                <ul>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li class="stick">|</li>
-                    <li>
-                        <a href="portfolio.html">Portfolio </a>
-                    </li>
-                    <li class="stick">|</li>
-                    <li>
-                        <a href="index.html">About </a>
-                    </li>
-                </ul>
-            </div>
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">
+                Khusanboy
+            </a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
     </header>
-    <section class="content">
-        <div>
-            <div class="title">Contact</div>
-            <hr>
-            <div class="contact-content">
-                <div class="contact-data">Name</div>
-                <input class="text" type="text" placeholder="Khusanboy Ibragimov">
-                <div class="contact-data">Email</div>
-                <input class="text" type="email" placeholder="mail4khusanboy@gmail.com">
-                <div class="content-data">Message</div>
-                <textarea></textarea>
-                <button class="button">Submit</button>
-            </div>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Contact</h1>
+
+            <form id="contact-form">
+                <ul>
+                    <li>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Khusanboy Ibragimov" required="required">
+                    </li>
+                    <li>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="mail4khusanboy@gmail.com" required="required">
+                    </li>
+                    <li>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required="required"></textarea>
+                    </li>
+                </ul>
+                <input type="submit">
+            </form>
+
+        </section>
+
+    </div>
+
+    <footer>
+        <div class="container">
+            Rutgers Bootcamp 2018
         </div>
-    </section>
-    <footer>Rutgers Bootcamp 2018</footer>
+    </footer>
 </body>
 
 </html>
